--- a/吕彬.html
+++ b/吕彬.html
@@ -27,7 +27,7 @@
         <h2>我的技能</h2>
         <dl>
           <dt>JavaScript/HTML5/CSS3/jQuery</dt>
-          <dd><span class="mastery" style="width: 90%"></span></dd>
+          <dd><span class="mastery" style="width: 80%"></span></dd>
           <dt>Vue/Vuex/Vue-router</dt>
           <dd><span class="mastery" style="width: 80%"></span></dd>
           <dt>Node.js/Express</dt>
@@ -35,7 +35,7 @@
           <dt>Webpack/Git/Npm</dt>
           <dd><span class="mastery" style="width: 60%"></span></dd>
           <dt>ES6/Sass/PostCSS/Babel</dt>
-          <dd><span class="mastery" style="width: 70%"></span></dd>
+          <dd><span class="mastery" style="width: 60%"></span></dd>
         </dl>
       </div>
       <div class="others">
@@ -97,7 +97,7 @@
               <h3>Vue技术栈实现cnode社区</h3>
               <ul>
                 <li><strong>项目介绍：</strong>
-                  为什么做这个项目(解决了什么问题)，提供了哪些功能。我在项目中承担的角色，用到了哪些技术，做了过程中遇到了什么问题，你是如何解决的，在代码复用性、体验、性能、ui上做了哪些优化</li>
+                  配合cnode社区提供的api制作的社区项目，可以访问文章及个人信息，支持分页浏览。实际项目中主要遇到的问题是父子组件数据传递、生命周期及如何检测路由变化，看文档搜索解决</li>
                 <li><strong>技术栈：</strong>vue、vue-router、vuex、element-ui、webpack、es6</li>
                 <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/vue-cnode-demo" target="_blank">项目源码</a></li>
                 <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/vue-cnode-demo/dist/index.html" target="_blank">点击查看</a></li>
@@ -111,7 +111,7 @@
               <h3>Vue移动端app</h3>
               <ul>
                 <li><strong>项目介绍：</strong>
-                  为什么做这个项目(解决了什么问题)，提供了哪些功能。我在项目中承担的角色，用到了哪些技术，做了过程中遇到了什么问题，你是如何解决的，在代码复用性、体验、性能、ui上做了哪些优化</li>
+                  一个集合新闻资讯及购物的app，提供了资讯浏览，购物等功能。在实际项目中主要是搭配mui及mint-ui框架或库的使用，自己创建模拟后端的数据。路由的整体导出模块化</li>
                 <li><strong>技术栈：</strong>vue、vue-router、vuex、mint-ui、、mui、webpack、es6</li>
                 <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/Vue-demo-0221" target="_blank">项目源码</a></li>
                 <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Vue-demo-0221/dist/index.html" target="_blank">点击查看</a></li>
@@ -124,7 +124,7 @@
               <h3>PC端个人主页网站</h3>
               <ul>
                 <li><strong>项目介绍：</strong>
-                  为什么做这个项目(解决了什么问题)，提供了哪些功能。我在项目中承担的角色，用到了哪些技术，做了过程中遇到了什么问题，你是如何解决的，在代码复用性、体验、性能、ui上做了哪些优化</li>
+                  比较完善的简历网站，方便个人或是公司信息的展示。主要用到的技术是html、css、javascript，配合leancloud可以留言提交和更新。遇到的问题是使用leancloud，解决办法就是看文档，代码测试。</li>
                 <li><strong>技术栈：</strong>html、css、javascript、jquery、es6</li>
                 <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/Resume" target="_blank">项目源码</a></li>
                 <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Resume/resume" target="_blank">点击查看</a></li>
@@ -137,7 +137,7 @@
               <h3>快捷导航网站</h3>
               <ul>
                 <li><strong>项目介绍：</strong>
-                  为什么做这个项目(解决了什么问题)，提供了哪些功能。我在项目中承担的角色，用到了哪些技术，做了过程中遇到了什么问题，你是如何解决的，在代码复用性、体验、性能、ui上做了哪些优化</li>
+                  为了方便的导航，同时支持自定义网站保存，提供了触发按键就可以访问网站。技术上主要是html、css、javascript，为了分别后续的功能拓展，封装了一些函数</li>
                 <li><strong>技术栈：</strong>html、css、javascript</li>
                 <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/JavaScript-cases/tree/master/08Quick%20navigation"
                     target="_blank">项目源码</a></li>
@@ -149,7 +149,7 @@
         </div>
         <div class="about-me section">
           <h2>个人评价</h2>
-          <p>追求新技术，喜欢承担有技术难度的工作，爱分享，善于知识总结梳理</p>
+          <p>追求新技术，喜欢承担有技术难度的工作。爱分享，善于知识总结梳理。主动学习性好，会对其它框架或是后端技术去了解学习。</p>
         </div>
       </div>
     </div>
