--- a/吕彬.html
+++ b/吕彬.html
@@ -41,9 +41,12 @@
       <div class="others">
         <h2>技术平台</h2>
         <ul class="contact">
-          <li><span class="iconfont icon-github"></span><a href="https://github.com/lvbin8023" target="_blank">Github</a></li>
-          <li><span class="iconfont icon-blog"></span><a href="https://juejin.im/user/5a7b9acef265da4e9d221b01" target="_blank">掘金</a></li>
-          <li><span class="iconfont icon-zhihu"></span><a href="https://www.zhihu.com/people/lu-bin-85/posts" target="_blank">知乎</a>
+          <li><span class="iconfont icon-github"></span><a href="https://github.com/lvbin8023"
+              target="_blank">Github</a></li>
+          <li><span class="iconfont icon-blog"></span><a href="https://juejin.im/user/5a7b9acef265da4e9d221b01"
+              target="_blank">掘金</a></li>
+          <li><span class="iconfont icon-zhihu"></span><a href="https://www.zhihu.com/people/lu-bin-85/posts"
+              target="_blank">知乎</a>
           </li>
         </ul>
       </div>
@@ -51,7 +54,9 @@
     <div class="main">
       <div class="intro clearfix">
         <img src="./lvbin.jpg" alt="">
-        <p>1年前端开发经验，对html、css、javascript熟悉掌握，会使用jquery，bootstrap等库。熟悉Vue技术栈，熟悉模块化、工程化开发流程。会Webpack的常用配置，掌握使用ES6写代码，有PC、移动端开发经验，技术追求者。</p>
+        <p>
+          1年前端开发经验，对html、css、javascript熟悉掌握，会使用jquery，bootstrap等库。熟悉Vue技术栈，熟悉模块化、工程化开发流程。会Webpack的常用配置，掌握使用ES6写代码，有PC、移动端开发经验，技术追求者。
+        </p>
         <p><strong>在线简历预览：</strong><a>https://lvbin8023.github.io/lvbin-resume/吕彬.html</a></p>
       </div>
       <div class="education section">
@@ -75,8 +80,10 @@
                 <li><strong>项目介绍：</strong>
                   配合cnode社区提供的api制作的社区项目，可以访问文章及个人信息，支持分页浏览。实际项目中主要遇到的问题是父子组件数据传递、生命周期及如何检测路由变化，看文档搜索解决</li>
                 <li><strong>技术栈：</strong>vue、vue-router、vuex、element-ui、webpack、es6</li>
-                <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/vue-cnode-demo" target="_blank">项目源码</a></li>
-                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/vue-cnode-demo/dist/index.html" target="_blank">点击查看</a></li>
+                <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/vue-cnode-demo"
+                    target="_blank">项目源码</a></li>
+                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/vue-cnode-demo/dist/index.html"
+                    target="_blank">点击查看</a></li>
               </ul>
 
             </div>
@@ -89,8 +96,10 @@
                 <li><strong>项目介绍：</strong>
                   一个集合新闻资讯及购物的app，提供了资讯浏览，购物等功能。在实际项目中主要是搭配mui及mint-ui框架或库的使用，自己创建模拟后端的数据。路由的整体导出模块化</li>
                 <li><strong>技术栈：</strong>vue、vue-router、vuex、mint-ui、、mui、webpack、es6</li>
-                <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/Vue-demo-0221" target="_blank">项目源码</a></li>
-                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Vue-demo-0221/dist/index.html" target="_blank">点击查看</a></li>
+                <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/Vue-demo-0221" target="_blank">项目源码</a>
+                </li>
+                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Vue-demo-0221/dist/index.html"
+                    target="_blank">点击查看</a></li>
               </ul>
             </div>
           </div>
@@ -100,10 +109,12 @@
               <h3>PC端个人主页网站</h3>
               <ul>
                 <li><strong>项目介绍：</strong>
-                  比较完善的简历网站，方便个人或是公司信息的展示。主要用到的技术是html、css、javascript，配合leancloud可以留言提交和更新。遇到的问题是使用leancloud，解决办法就是看文档，代码测试。</li>
+                  比较完善的简历网站，方便个人或是公司信息的展示。主要用到的技术是html、css、javascript，配合leancloud可以留言提交和更新。遇到的问题是使用leancloud，解决办法就是看文档，代码测试。
+                </li>
                 <li><strong>技术栈：</strong>html、css、javascript、jquery、es6</li>
                 <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/Resume" target="_blank">项目源码</a></li>
-                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Resume/resume" target="_blank">点击查看</a></li>
+                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/Resume/resume" target="_blank">点击查看</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -115,9 +126,11 @@
                 <li><strong>项目介绍：</strong>
                   为了方便的导航，同时支持自定义网站保存，提供了触发按键就可以访问网站。技术上主要是html、css、javascript，为了分别后续的功能拓展，封装了一些函数</li>
                 <li><strong>技术栈：</strong>html、css、javascript</li>
-                <li><strong>项目源码: </strong><a href="https://github.com/lvbin8023/JavaScript-cases/tree/master/08Quick%20navigation"
+                <li><strong>项目源码: </strong><a
+                    href="https://github.com/lvbin8023/JavaScript-cases/tree/master/08Quick%20navigation"
                     target="_blank">项目源码</a></li>
-                <li><strong>预览项目: </strong><a href="https://lvbin8023.github.io/JavaScript-cases/08Quick%20navigation/快捷导航.html"
+                <li><strong>预览项目: </strong><a
+                    href="https://lvbin8023.github.io/JavaScript-cases/08Quick%20navigation/快捷导航.html"
                     target="_blank">点击查看</a></li>
               </ul>
             </div>
@@ -133,6 +146,17 @@
                 <li>了解和引导客户需求，提供解决方案，配合销售签单。定期电话回访、在线方式或到店处理问题。</li>
                 <li>负责合作商户进行软件培训工作，排查商户网络及解决软件故障问题。及时沟通，收集商户使用问题并反馈到公司，保持良好的客情关系。</li>
                 <li>互联网公司节奏较快，为方便工作。自己制作培训课件方便对销售及商户进行产品培训，自我学习驱动力好。</li>
+              </ul>
+            </div>
+          </div>
+          <div class="detail">
+            <div class="left pill">2019/04 - 2019/01</div>
+            <div class="more">
+              <h3><strong>江西乐钉科技有限公司</strong>, 研发工程师</h3>
+              <ul>
+                <li>根据项目实际PC端或是移动端的开发需求，使用团队讨论确定的技术选型，进行项目的前端开发。</li>
+                <li>针对项目的公用代码进行封装和优化，解决项目页面的bug，配合团队的兼容需求进行修改，确保兼容性。</li>
+                <li>配合后端完成项目中测试环境及线上环境的数据完整性，与后端沟通项目的实际运行情况，确定页面渲染正常。</li>
               </ul>
             </div>
           </div>
